<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Child Growth Monitor - quick and accurate data on malnutrition
  ~ Copyright (c) 2018 Markus Matiaschek <mmatiaschek@gmail.com> for Welthungerhilfe
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rytConsentDetail"
                android:layout_width="100dp"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/imgConsent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/consent"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/search_grey"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Date : "
                android:textColor="@color/colorGreyDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/24/2018"
                android:textColor="@color/colorGreyDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editPrename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/prename"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:text="@string/no_location"
                    android:singleLine="true"
                    android:hint="@string/location"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imgLocation"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/location"
                android:visibility="invisible"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:focusable="false"
                    android:editable="false"
                    android:hint="@string/birth"/>

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imgBirth"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:tint="@color/colorGreyDark"
                android:src="@drawable/right" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editGuardian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/guardian"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="age is estimated"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex_female"
                android:textColor="@color/colorGreyDark"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex_male"
                android:textColor="@color/colorGreyDark"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioFluid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex_fluid"
                android:textColor="@color/colorGreyDark"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/lytCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/back"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textAllCaps="true"/>
            
            <Button
                android:id="@+id/btnNext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/colorGreyDark"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>